# solax-station-live

./: .gitignore  CMakeLists.txt  esp_idf_project_configuration.json  exclude_lvgl_helium.py  package-lock.json  partitions.csv  platformio.ini  sdkconfig  sdkconfig.common  sdkconfig.crowpanel  sdkconfig.crowpanel-advance  sdkconfig.defaults  sdkconfig.old  sdkconfig.solar-station-live  sdkconfig.solar-station-live-advance  sdkconfig.solar-station-live-advance.old
.github/: copilot-instructions.md
SquareLine/: SolaxStationLive_Project.sll  SolaxStationLive_Project.spj  SolaxStationLive_Project_events.py  Themes.slt
boards/: CrowPanel70.json  CrowPanel70_Advance.json  WaveShareESP32S3-touch-lcd.json
doc/: MB_Deye SUN 12Kupraveno.xml  description.html  (+13 more)
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_ComponentsScreen.c  ui_Dashboard.c  ui_Dashboard.h  ui_IntelligenceSetup.c  ui_IntelligenceSetup.h  ui_Screen1.c  ui_Splash.c  ui_Splash.h  ui_WifiSetup.c  ui_WifiSetup.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_plugcomponent.c  ui_comp_plugcomponent.h  ui_events.c  ui_events.h  ui_font_Font1.c  ui_font_OpenSans12.c  ui_font_OpenSans16.c  ui_font_OpenSansExtraSmall.c  ui_font_OpenSansLarge.c  ui_font_OpenSansLargeBold.c  ui_font_OpenSansMedium.c  ui_font_OpenSansMediumBold.c  ui_font_OpenSansSmall.c  ui_font_RobotoMonoExtraSmall.c  ui_font_RobotoMonoLarge.c  ui_font_RobotoMonoMedium.c  ui_font_RobotoMonoSmall.c  ui_helpers.c  ui_helpers.h  ui_img_1061873486.c  ui_img_1215525481.c  ui_img_1279321064.c  (+29 more)
src/ui/components/: ui_comp_hook.c
src/ui/images/: ui_img_564643105.c  ui_img_960241876.c  ui_img_logo_png.c
src/ui/screens/: ui_Dashboard.c  ui_WifiSetup.c
(+167 files in other folders)
